--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,7 @@
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: black;
-  }
-  .header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
-  }
-  .nav {
-    display: flex;
-    justify-content: center;
-    background-color: #444;
-    padding: 10px 0;
-  }
-  .nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 0 15px;
-  }
-  .nav a:hover {
-    background-color: #555;
-  }
-  .content {
-    padding: 20px;
-    text-align: center;
-  }
-  .footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap");
 
+html,
+body {
+  background-color: #111;
+  font-family: "Roboto";
+}
