--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,71 @@
 
 html,
 body {
+  text-align: center;
+  background-color: #171717;
+  color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  color: #aaa;
+  font-size: 0.925rem;
+  max-width: 40rem;
+  display: inline-block;
+  text-align: left;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+  background-color: #222;
+  color: #fff;
+  font-size: 0.925rem;
+  border-radius: 0.25rem;
+  padding: 8px 10px;
+}
+
+button:focus {
+  outline: #444 0.3rem solid;
+}
+
+* {
+  font-family: "Roboto", system-ui, sans-serif;
+  margin: 0;
+}
+
+h1,
+h2,
+h3 {
+  margin-bottom: 1rem;
+}
+
+img,
+svg {
+  vertical-align: middle;
+}
+
+main {
+  margin-top: 6rem;
+}
+
+nav {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  width: 100vw;
+  height: 4rem;
   background-color: #111;
-  font-family: "Roboto";
+}
+
+nav div {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav div section {
+  margin: 1rem;
 }
