--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,6 @@ h3 {
   margin-bottom: 1rem;
 }
 
-img,
-svg {
-  vertical-align: middle;
-}
-
 main {
   margin-top: 6rem;
 }
@@ -69,4 +64,20 @@ nav div {
 
 nav div section {
   margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+nav div section img {
+  height: 2rem;
+  width: 2rem;
+  border-radius: 0.5rem;
+  vertical-align: middle;
+  transition: 0.2s ease;
+}
+
+nav div section img:active {
+  transform: scale(0.9);
 }
